--- a/src/bz-browse-widget.ui
+++ b/src/bz-browse-widget.ui
@@ -25,17 +25,17 @@
             <property name="name">content</property>
             <property name="title" translatable="yes">Browser</property>
             <property name="child">
-              <object class="AdwClamp">
-                <property name="maximum-size">3000</property>
-                <property name="tightening-threshold">2500</property>
+              <object class="GtkScrolledWindow">
+                <style>
+                  <class name="view"/>
+                </style>
+                <property name="hscrollbar-policy">never</property>
                 <property name="child">
-                  <object class="GtkScrolledWindow">
-                    <property name="hscrollbar-policy">never</property>
+                  <object class="AdwClampScrollable">
+                    <property name="maximum-size">1800</property>
+                    <property name="tightening-threshold">1700</property>
                     <property name="child">
                       <object class="GtkListView">
-                        <style>
-                          <class name="view"/>
-                        </style>
                         <property name="model">
                           <object class="GtkNoSelection">
                             <binding name="model">
